--- a/labs/00-c-programming-lab/Makefile
+++ b/labs/00-c-programming-lab/Makefile
@@ -2,14 +2,14 @@ CC = gcc
 CFLAGS = -O0 -g -Wall -Werror
 
 all: qtest
-	-tar -cf handin.tar queue.c queue.h
+	# -tar -cf handin.tar queue.c queue.h
 
 queue.o: queue.c queue.h harness.h
 	$(CC) $(CFLAGS) -c queue.c 
 
 qtest: qtest.c report.c console.c harness.c queue.o
 	$(CC) $(CFLAGS) -o qtest qtest.c report.c console.c harness.c queue.o
-	tar cf handin.tar queue.c queue.h
+	# tar cf handin.tar queue.c queue.h
 
 test: qtest driver.py
 	chmod +x driver.py
